# bwenv

./: Cargo.toml  README.md  build.rs  bwenv.toml  bwenv.yaml  install.sh  renovate.json  schema.json  test.sh
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
lib/: Cargo.toml
lib/src/: bitwarden.rs  cache.rs  config.rs  config_toml.rs  config_yaml.rs  data.rs  error.rs  lib.rs  schema_types.rs  version.rs
src/: bitwarden.rs  cache.rs  cli.rs  config.rs  config_toml.rs  config_yaml.rs  error.rs  fs.rs  main.rs  time.rs
tests/: cli.rs
