[package]
name = "bwenv"
version = "1.2.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.6", features = ["derive", "cargo", "env"] }
tokio = { version = "1.33.0", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
inquire = "0.7.2"
bwenv-lib = { path = "./lib" }
tracing = "0.1.40"
semver = "1.0.22"

[workspace]
members = ["lib", "."]

[build-dependencies]
bwenv-lib = { path = "./lib" }
schemars = "0.8.16"
serde_json = "1.0.114"
