[package]
name = "bwenv"
version = "1.2.0"
edition = "2021"

[dependencies]
bitwarden = { version = "0.3.1", features = ["secrets"] }
clap = { version = "4.4.6", features = ["derive", "cargo", "env"] }
clap-markdown = "0.1.3"
serde = "1.0.188"
tokio = { version = "1.33.0", features = ["full"] }
toml = "0.5"
uuid = "1.4.1"
openssl = { version = "0.10", features = ["vendored"] }
semver = "1.0.22"
serde_yaml = "0.8.26"
format_serde_error = { git = "https://github.com/AlexanderThaller/format_serde_error.git", branch = "main" }
anyhow = "1.0.81"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
inquire = "0.7.2"
tabular = "0.2.0"
colored = "2.1.0"
atty = "0.2.14"

[dev-dependencies]
tempfile = "3.10.1"
