[package]
name = "bwenv"
version = "1.2.2"
edition = "2021"

[dependencies]
clap = { version = "4.4.6", features = ["derive", "cargo", "env"] }
tokio = { version = "1.33.0", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
inquire = "0.7.2"
bwenv-lib = { path = "./lib" }
tracing = "0.1.40"
semver = "1.0.22"
atty = "0.2.14"
openssl-sys = {version = "0.9", features = ["vendored"]}

[workspace]
members = ["lib", "."]

[build-dependencies]
bwenv-lib = { path = "./lib" }
schemars = "0.8.16"
serde_json = "1.0.114"

[dev-dependencies]
assert_cmd = "2.0.14"
dotenv-parser = "0.1.3"
predicates = "3.1.0"
