[package]
name = "bwenv-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tabular = "0.2.0"
colored = "2.1.0"
schemars = "0.8.16"
semver = "1.0.22"
serde_yaml = "0.8.26"
format_serde_error = { git = "https://github.com/AlexanderThaller/format_serde_error.git", branch = "main" }
serde = "1.0.188"
tracing = "0.1.40"
uuid = "1.4.1"
anyhow = "1.0.81"
toml = "0.5"
bitwarden = { version = "0.3.1", features = ["secrets"] }
