[package]
name = "bwenv-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
tabular = "0.2.0"
colored = "2.1.0"
schemars = "0.8.16"
semver = "1.0.22"
serde_yaml = "0.8.26"
format_serde_error = { git = "https://github.com/AlexanderThaller/format_serde_error.git", branch = "main" }
serde = "1.0.188"
tracing = "0.1.40"
uuid = "1.4.1"
anyhow = "1.0.81"
toml = "0.5"
bitwarden = { version = "0.3.1", features = ["secrets"] }
derived-deref = "2.1.0"
dirs = "5.0.1"
reqwest = { version = "0.12.1", features = ["json"] }
once_cell = "1.19.0"
tokio-retry = "0.3.0"
async-mutex = "1.4.0"

[dev-dependencies]
tempfile = "3.10.1"
tokio = { version = "1.33.0", features = ["full"] }
